@@ -153,6 +153,8 @@ UI_EN = {
     UI_scrounger_found = "Oh, look, an extra %s",
     UI_trait_quickworker = "Quick Worker",
     UI_trait_quickworkerdesc = "You have a penchant for expedience in all things.<br>Your timed actions (such as sawing logs, crafting items, or disassembling furniture) are considerably faster.",
+    UI_trait_slowworker = "Slow Worker",
+    UI_trait_slowworkerdesc = "Whether because you're lazy or just like to double-check your work, you tend to take longer getting things done.<br>You perform timed actions (such as sawing logs, crafting items, or disassembling furniture) much more slowly.",
     UI_trait_leadfoot = "Lead Foot",
     UI_trait_leadfootdesc = "You've always had a heavy step and now it's time to put your foot down - on some zombies.<br>Your stomps are considerably more powerful.",
     UI_trait_glassbody = "Made of Glass",
